@@ -2,6 +2,12 @@
 
 === 0.7.7
 
+* New Features:
+  * Page#form_with takes a +criteria+ hash.
+  * Page#form is changed to Page#form_with
+  * Mechanize#get takes custom http headers.  Thanks Mike Dalessio!
+  * Form#click_button submits a form defaulting to the current button.
+
 * Bug Fixes:
   * Added more examples.  Thanks Robert Jackson.
   * #20480 Making sure the Host header is set.
